force-app/main/default/objects/Onboarding__c/Onboarding__c.object-meta.xml
<CustomObject>
    <label>Onboarding</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Onboarding Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboardings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>