force-app/main/default/objects/Onboarding__c/fields/Desk__c.field-meta.xml
<CustomField>
    <fullName>Desk__c</fullName>
    <label>Desk</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>