force-app/main/default/objects/Onboarding__c/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <formula>New_Hire1__r.Applicant_Record__r.Hiring_Manager__r.FirstName &amp; &quot; &quot; &amp; New_Hire1__r.Applicant_Record__r.Hiring_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Name</label>
    <type>Text</type>
</CustomField>