force-app/main/default/objects/Onboarding__c/fields/New_Hire1__c.field-meta.xml
<CustomField>
    <fullName>New_Hire1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Hire</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Onboarding Records</relationshipLabel>
    <relationshipName>Onboardings</relationshipName>
    <type>Lookup</type>
</CustomField>