force-app/main/default/objects/Onboarding__c/fields/New_Hire__c.field-meta.xml
<CustomField>
    <fullName>New_Hire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Hire</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Onboardings</relationshipName>
    <type>Lookup</type>
</CustomField>