force-app/main/default/objects/Onboarding__c/fields/New_Hire_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Hire_Email__c</fullName>
    <label>New Hire Email</label>
    <type>Email</type>
</CustomField>