force-app/main/default/objects/Onboarding__c/fields/New_Hire_First_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Hire_First_Name__c</fullName>
    <formula>New_Hire1__r.First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Hire First Name</label>
    <type>Text</type>
</CustomField>