force-app/main/default/objects/Onboarding__c/fields/Onboarding_Buddy_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Buddy_First_Name__c</fullName>
    <formula>Onboarding_Buddy__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Buddy First Name</label>
    <type>Text</type>
</CustomField>