force-app/main/default/objects/Onboarding__c/fields/Quip_Folders__c.field-meta.xml
<CustomField>
    <fullName>Quip_Folders__c</fullName>
    <label>Quip Folders</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>