force-app/main/default/objects/Onboarding__c/fields/Slack_Channels__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channels__c</fullName>
    <label>Slack Channels</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>